The GameScene was seted and Players' was created.

--- a/TicTacToe/TicTacToe.vcxproj
+++ b/TicTacToe/TicTacToe.vcxproj
@@ -130,6 +130,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Application\Player\AI\AIPlayer.cpp" />
+    <ClCompile Include="src\Application\Player\Player.cpp" />
     <ClCompile Include="src\Scenes\Game\GameScene.cpp" />
     <ClCompile Include="src\Scenes\SceneStack\SceneStack.cpp" />
     <ClCompile Include="src\Application\Context\Context.cpp" />
@@ -142,6 +144,8 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Application\Player\AI\AIPlayer.h" />
+    <ClInclude Include="src\Application\Player\Player.h" />
     <ClInclude Include="src\Scenes\Game\GameScene.h" />
     <ClInclude Include="src\Scenes\SceneStack\SceneStack.h" />
     <ClInclude Include="src\Application\Context\Context.h" />
