--- a/TicTacToe/TicTacToe.vcxproj
+++ b/TicTacToe/TicTacToe.vcxproj
@@ -130,6 +130,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Application\Board\Board.cpp" />
     <ClCompile Include="src\Application\Player\AI\AIPlayer.cpp" />
     <ClCompile Include="src\Application\Player\Player.cpp" />
     <ClCompile Include="src\Scenes\Game\GameScene.cpp" />
@@ -144,6 +145,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Application\Board\Board.h" />
     <ClInclude Include="src\Application\Player\AI\AIPlayer.h" />
     <ClInclude Include="src\Application\Player\Player.h" />
     <ClInclude Include="src\Scenes\Game\GameScene.h" />
